--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.12.4",
-    "cors": "^2.8.0",
-    "moment": "^2.24.0"
+    "express": "^4.16.4",
+    "cors": "^2.8.5",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.23"
   },
   "engines": {
     "node": "4.4.5"
