--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   },
   "dependencies": {
     "express": "^4.16.4",
-    "cors": "^2.8.5",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.23"
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": "4.4.5"
